# FFmpeg

./: config-win64.h  config-win64.sh
fftools/: CMakeLists-ffplay.txt  CMakeLists.txt  ffmpeg.c  ffmpeg_opt.c  ffplay.c  record.c  record.h
libavcodec/: Makefile  decode.c  encode.c  golomb.h  h2645_parse.c  h264_parse.c  h264_ps.c  h264_slice.c  h264dec.c  libx264.c  utils.c
libavformat/: dump.c  file.c  flvdec.c  mov.c  movenc.c  mux.c  utils.c
libavutil/: Makefile  avstring.c  avstring.h  frame.c
